# XMRBridge

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  xmrbridge_repo_structure.txt
.github/workflows/: ci.yml
crates/monero-rpc/: Cargo.toml
crates/monero-rpc/src/: lib.rs
crates/price-engine/: Cargo.toml
crates/price-engine/src/: lib.rs
crates/security-utils/: Cargo.toml
crates/security-utils/src/: lib.rs
gateway/: Cargo.toml
gateway/src/: config.rs  error.rs  logging.rs  main.rs
gateway/src/api/: invoices.rs  merchants.rs  mod.rs  webhooks.rs
gateway/src/db/: mod.rs  models.rs  queries.rs
gateway/src/services/: callback.rs  mod.rs  price.rs  security.rs  subaddress.rs  watcher.rs
gateway/src/tests/: api_tests.rs  db_tests.rs  security_tests.rs  service_tests.rs
gateway/tests/: integration_invoices.rs  integration_webhooks.rs  mock_wallet_rpc.rs
migrations/: 0001_init.sql
scripts/: reset_db.sh  run_dev.sh  seed_db.sh
tests/: e2e_checkout.rs  e2e_payment_confirm.rs
